--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -68,9 +68,13 @@
 
 @media (max-width: $tScreenMax) {
   .container {
-    overflow-y: unset;
+    overflow-y: scroll;
     position: relative;
     height: 100%;
+    &.code-opened {
+      overflow: hidden;
+      position: static;
+    }
     .left-side {
       display: none;
     }
@@ -84,6 +88,9 @@
       left: 0px;
       width: 100%;
       height: auto;
+      &.code-opened {
+        display: none;
+      }
     }
   }
 }
